<resources>
    <string name="app_name">Note_app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="i_have_already_account">I Have Already Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="add">Add</string>
    <string name="to_do">To Do</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="new_title">New Title</string>
    <string name="new_content">New Content</string>
    <string name="update">update</string>
</resources>