<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">







    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_signUp_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/editText_SignUP_PersonName"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email_signUp_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/email"

        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/name_signUp_layout"
        app:layout_constraintStart_toStartOf="@+id/name_signUp_layout"
        app:layout_constraintTop_toBottomOf="@+id/name_signUp_layout" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/editText_SingUp_EmailAddress"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_signUp_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/Email_signUp_layout"
        app:layout_constraintStart_toStartOf="@+id/Email_signUp_layout"
        app:layout_constraintTop_toBottomOf="@+id/Email_signUp_layout" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/editText_SignUP_Password"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_Up_button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/password_signUp_layout"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/password_signUp_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_signUp_layout" />

    <TextView
        android:id="@+id/iHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/i_have_already_account"
        app:layout_constraintEnd_toEndOf="@+id/sign_Up_button"
        app:layout_constraintHorizontal_bias="0.5"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/sign_Up_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_Up_button" />

</androidx.constraintlayout.widget.ConstraintLayout>