<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivityData">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/new_content"
        android:id="@+id/NewContentLayoutText"
        app:boxStrokeColor="@color/purple_200"
        app:boxStrokeWidth="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/NewTitleLayoutText"
        app:layout_constraintVertical_bias="0.224">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NewContentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NewTitleLayoutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/new_title"

        app:boxStrokeColor="@color/purple_200"
        app:boxStrokeWidth="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NewTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/update"
        android:id="@+id/UpdateButton"
        app:layout_constraintEnd_toEndOf="@+id/NewContentLayoutText"
        app:layout_constraintStart_toStartOf="@+id/NewContentLayoutText"
        app:layout_constraintTop_toBottomOf="@+id/NewContentLayoutText" />
</androidx.constraintlayout.widget.ConstraintLayout>