<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notes.AddNotes">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:state_dragged="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/NoteSwitcher"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/NoteOrToDoText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/note"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/NoteSwitcher"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:clickable="true"
                    android:id="@+id/ADDButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/add"
                    android:textColor="@color/purple_700"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/CancelAdditionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/white"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_round_cancel_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        android:layout_height="0sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="50dp"
                android:id="@+id/TitleTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/title"
                app:boxStrokeColor="@color/purple_200"
                app:boxStrokeWidth="3dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/TitleEditText"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="30dp"
                android:id="@+id/DetailsTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/content"
                app:boxStrokeColor="@color/purple_200"
                app:boxStrokeWidth="3dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/DetailsEditText"
                    android:layout_height="150dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ConstraintDateView"
                android:layout_marginTop="26dp"
                android:visibility="gone"
                android:layout_marginHorizontal="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/AlarmDayDataField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/day"
                    android:visibility="visible"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeWidth="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/AlarmDataMonthField"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/AlarmDayEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/AlarmDataMonthField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:hint="@string/month"
                    android:visibility="visible"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeWidth="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/AlarmYearDataField"
                    app:layout_constraintStart_toEndOf="@+id/AlarmDayDataField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/AlarmMonthEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/AlarmYearDataField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/year"
                    android:visibility="visible"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeWidth="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/AlarmDataMonthField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/AlarmYearEditText"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>